test/errors/error17.sp
sorts
#s={a,b,c,1,2}-{1}.
predicates
p(#s).
rules
p(X+1).
